finishing touches on testimonials, started pictures

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,6 @@ layout: default
 <section class="container">
   <div class="section">
 
-    <!--   Icon Section   -->
     <div class="row">
       <div class="col s12 m4">
         <div class="icon-block">
@@ -110,27 +109,14 @@ layout: default
 
 <section class="container">
   <div class="section">
-
     <div class="row">
       <div class="col s12 center">
         <h4><a id="lifestyle" class="anchor">Lifestyle</a></h4>
         <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</p>
       </div>
-      </div>
-
-  </div>
-</section>
-
-<!-- <section class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-        <h5 class="header col s12 light">Testimonials</h5>
-      </div>
     </div>
   </div>
-  <div class="parallax"><img src="img/background1.jpg" alt="Unsplashed background img 3"></div>
-</section> -->
+</section>
 
 <section id="testimonials">
   {% include testimonials.html %}
@@ -138,6 +124,58 @@ layout: default
 
 <section id="location">
   {% include map.html %}
+</section>
+
+<section class="container">
+  <div class="section">
+    <div class="row">
+      <div class="col s12 center">
+        <h4><a id="Pictures" class="anchor">Pictures</a></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+      <div class="col s12 m6 l3 center">
+        <img src="img/b1.jpg" alt="" class="full-width">
+      </div>
+    </div>
+  </div>
 </section>
 
 <footer class="page-footer light-blue">
