--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,11 +1,8 @@
-<!-- <iframe id="map" src="https://snazzymaps.com/embed/43358"></iframe> -->
 <div id="map"></div>
-<div id="left-panel">
-  <!-- <div class="row"> -->
-    <div class="input-field">
-      <input placeholder="E.g. Restaurants" id="map-search" type="text" class="validate">
-      <label for="map-search">Search Local Establishments</label>
-      <a class="btn waves-effect" id="search-btn"><i class="material-icons">search</i></a>
-    </div>
-  <!-- </div> -->
+<div id="left-panel" style="display: none">
+  <div class="input-field">
+    <input placeholder="E.g. Restaurants" id="map-search" type="text" class="validate">
+    <label for="map-search">Search Local Establishments</label>
+    <a class="btn waves-effect" id="search-btn"><i class="material-icons">search</i></a>
+  </div>
 </div>
