--- a/css/materialize.css
+++ b/css/materialize.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Copse");
+@import url("https://fonts.googleapis.com/css?family=Domine");
+@import url("https://fonts.googleapis.com/css?family=Asar");
 .materialize-red { background-color: #e51c23 !important; }
 
 .materialize-red-text { color: #e51c23 !important; }
@@ -1208,7 +1209,7 @@ html { box-sizing: border-box; }
 
 *, *:before, *:after { box-sizing: inherit; }
 
-button, input, optgroup, select, textarea { font-family: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
+button, input, optgroup, select, textarea { font-family: Domine, -apple-system, BlinkMacSystemFont, Georgia, serif; }
 
 ul:not(.browser-default) { padding-left: 0; list-style-type: none; }
 ul:not(.browser-default) > li { list-style-type: none; }
@@ -1667,24 +1668,24 @@ nav .input-field label.active i { color: #fff; }
   .navbar-fixed { height: 64px; } }
 a { text-decoration: none; }
 
-html { line-height: 1.5; font-family: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; font-weight: normal; color: rgba(0, 0, 0, 0.87); }
+html { line-height: 1.5; font-family: Domine, -apple-system, BlinkMacSystemFont, Georgia, serif; font-weight: normal; color: rgba(0, 0, 0, 0.87); }
 @media only screen and (min-width: 0) { html { font-size: 1.2rem; } }
 @media only screen and (min-width: 992px) { html { font-size: 1.2rem; } }
 @media only screen and (min-width: 1200px) { html { font-size: 1.2rem; } }
 
-h1, h2, h3, h4, h5, h6 { font-weight: 400; line-height: 1.3; }
+h1, h2, h3, h4, h5, h6 { font-weight: 400; line-height: 1.3; font-family: Asar, -apple-system, BlinkMacSystemFont, Georgia, serif; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 
-h1 { font-size: 4.2rem; line-height: 110%; margin: 2.8rem 0 1.68rem 0; }
+h1 { font-size: 3rem; line-height: 110%; margin: 2rem 0 1.2rem 0; }
 
-h2 { font-size: 3.56rem; line-height: 110%; margin: 2.37333rem 0 1.424rem 0; }
+h2 { font-size: 2.25rem; line-height: 110%; margin: 1.5rem 0 0.9rem 0; }
 
-h3 { font-size: 2.92rem; line-height: 110%; margin: 1.94667rem 0 1.168rem 0; }
+h3 { font-size: 2rem; line-height: 110%; margin: 1.33333rem 0 0.8rem 0; }
 
-h4 { font-size: 2.28rem; line-height: 110%; margin: 1.52rem 0 0.912rem 0; }
+h4 { font-size: 1.5rem; line-height: 110%; margin: 1rem 0 0.6rem 0; }
 
-h5 { font-size: 1.64rem; line-height: 110%; margin: 1.09333rem 0 0.656rem 0; }
+h5 { font-size: 1.25rem; line-height: 110%; margin: 0.83333rem 0 0.5rem 0; }
 
 h6 { font-size: 1.15rem; line-height: 110%; margin: 0.76667rem 0 0.46rem 0; }
 
@@ -2581,11 +2582,13 @@ p { line-height: 2rem; }
 .icon-block { padding: 0 15px; }
 .icon-block .material-icons { font-size: inherit; }
 
+.large-icon { font-size: 2.8rem; }
+
 #header-btn { margin-top: 32px; }
 
 .parallax img { min-height: 100%; min-width: 100%; }
 
-.parallax-container { text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
+.shadowed { text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
 
 .navbar-fixed { height: 72px; }
 
@@ -2635,6 +2638,14 @@ nav { height: 72px; padding: 4px 0; }
 .author { font-style: italic; }
 
 .full-width { width: 100%; }
+
+#top-split-box { border-radius: 12px 12px 0 0; margin: 0; }
+#top-split-box h1 { margin: 24px 0; }
+@media only screen and (max-width: 600px) { #top-split-box h1 { font-size: 2.5rem; } }
+
+#bottom-split-box { border-width: thin; border-color: #0091ea; border-style: solid; border-radius: 0 0 12px 12px; }
+#bottom-split-box h2 { margin: 24px 0; }
+@media only screen and (max-width: 600px) { #bottom-split-box h2 { font-size: 2rem; } }
 
 .homepage-hero-module { border-right: none; border-left: none; position: relative; height: calc(100vh - 120px); overflow: hidden; }
 
