--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -293,15 +293,17 @@ $toast-action-color: #eeff41;
 
 // 20. Typography
 // ==========================================================================
-@import url('https://fonts.googleapis.com/css?family=Copse');
-$font-stack: Copse, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+@import url('https://fonts.googleapis.com/css?family=Domine'); // https://fonts.googleapis.com/css?family=Copse
+$font-stack: Domine, -apple-system, BlinkMacSystemFont, Georgia, serif !default; // Copse
+@import url('https://fonts.googleapis.com/css?family=Asar');
+$font-stack-header: Asar, -apple-system, BlinkMacSystemFont, Georgia, serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
-$h1-fontsize: 4.2rem !default;
-$h2-fontsize: 3.56rem !default;
-$h3-fontsize: 2.92rem !default;
-$h4-fontsize: 2.28rem !default;
-$h5-fontsize: 1.64rem !default;
+$h1-fontsize: 3rem !default;
+$h2-fontsize: 2.25rem !default;
+$h3-fontsize: 2rem !default;
+$h4-fontsize: 1.5rem !default;
+$h5-fontsize: 1.25rem !default;
 $h6-fontsize: 1.15rem !default;
 
 
