--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<link rel="stylesheet" href="css/blueimp-gallery.css">
 	<!-- <link href="css/animate.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
@@ -20,6 +21,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
 	<script src="js/bin/video.js"></script>
+	<script src="js/bin/blueimp-gallery.min.js"></script>
   <script src="js/bin/init.js"></script>
 	<script src="js/bin/map.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZeM9SBHnk0w2ie-DDm173UyKkOPsGk&libraries=places&callback=initMap"></script>
