nearly finished pictures

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<link rel="stylesheet" href="css/blueimp-gallery.css">
+	<link rel="stylesheet" href="css/glide.core.min.css">
+	<link rel="stylesheet" href="css/glide.theme.css">
 	<!-- <link href="css/animate.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
@@ -22,6 +24,7 @@
   <script src="js/bin/materialize.js"></script>
 	<script src="js/bin/video.js"></script>
 	<script src="js/bin/blueimp-gallery.min.js"></script>
+	<script src="js/bin/glide.min.js"></script>
   <script src="js/bin/init.js"></script>
 	<script src="js/bin/map.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZeM9SBHnk0w2ie-DDm173UyKkOPsGk&libraries=places&callback=initMap"></script>
