--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2647,6 +2647,18 @@ nav { height: 72px; padding: 4px 0; }
 #bottom-split-box h2 { margin: 24px 0; }
 @media only screen and (max-width: 600px) { #bottom-split-box h2 { font-size: 2rem; } }
 
+.box { color: #fff; font-size: 3vw; display: flex; align-items: center; justify-content: center; }
+
+.module--horizontal { width: 100%; overflow: hidden; }
+
+.module--horizontal .box { width: 100%; }
+
+.glide__slide { border-left: thin solid white; border-right: thin solid white; opacity: 0.5; transition: opacity .6s; -o-transition: opacity .6s; -moz-transition: opacity .6s; -webkit-transition: opacity .6s; }
+
+.glide__slide.active { opacity: 1; }
+
+.glide__track { margin: 0; }
+
 .homepage-hero-module { border-right: none; border-left: none; position: relative; height: calc(100vh - 120px); overflow: hidden; }
 
 .no-video .video-container video, .touch .video-container video { display: none; }
