--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -4,11 +4,24 @@
       <h2><a id="Pictures" class="anchor">Pictures</a></h2>
     </div>
   </div>
-  <div id="image-carousel" class="blueimp-gallery blueimp-gallery-carousel blueimp-gallery-controls">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a href="#!" class="btn-floating btn-large waves-effect waves-light prev"><i class="material-icons">navigate_before</i></a>
-    <a href="#!" class="btn-floating btn-large waves-effect waves-light next"><i class="material-icons">navigate_next</i></a>
-    <a class="play-pause"></a>
+  <div class="module module--horizontal z-depth-4">
+    <div id="Carousel" class="glide">
+      <div class="glide__arrows">
+        <a class="glide__arrow btn-floating btn-large waves-effect waves-light prev" data-glide-dir="<"><i class="material-icons">navigate_before</i></a>
+        <a class="glide__arrow btn-floating btn-large waves-effect waves-light next" data-glide-dir=">"><i class="material-icons">navigate_next</i></a>
+      </div>
+      <div class="glide__wrapper">
+        <ul class="glide__track">
+          {% for image in site.data.images %}
+          <li class="glide__slide translucent">
+            <div class="box" style="background-color: #121212;">
+              <img src="img/{{ image.src }}">
+            </div>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="glide__bullets"></div>
+    </div>
   </div>
 </div>
