--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -221,3 +221,43 @@ nav {
     margin: 24px 0;
   }
 }
+
+.box {
+	color: #fff;
+	font-size: 3vw;
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.module--horizontal {
+	width: 100%;
+	overflow: hidden;
+}
+
+.module--horizontal .box {
+	width: 100%;
+}
+
+.glide__slide {
+  border-left: thin solid white;
+  border-right: thin solid white;
+  // opacity: 1;
+  opacity: 0.5;
+          transition: opacity .6s;
+       -o-transition: opacity .6s;
+     -moz-transition: opacity .6s;
+  -webkit-transition: opacity .6s;
+}
+
+.glide__slide.translucent {
+  // opacity: 0.5;
+}
+
+.glide__slide.active {
+  opacity: 1;
+}
+
+.glide__track {
+  margin: 0;
+}
