--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -13,8 +13,8 @@
       <div class="glide__wrapper">
         <ul class="glide__track">
           {% for image in site.data.images %}
-          <li class="glide__slide translucent">
-            <div class="box" style="background-color: #121212;">
+          <li class="glide__slide">
+            <div class="box">
               <img src="img/{{ image.src }}">
             </div>
           </li>
