--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#lifestyle">Lifestyle</a></li>
         <li><a href="#location">Location</a></li>
-        <li><a href="#">Pictures</a></li>
+        <li><a href="#pictures">Pictures</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
@@ -22,7 +22,7 @@ layout: default
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#lifestyle">Lifestyle</a></li>
         <li><a href="#location">Location</a></li>
-        <li><a href="#">Pictures</a></li>
+        <li><a href="#pictures">Pictures</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
@@ -65,7 +65,7 @@ layout: default
     <div class="row">
       <div class="col s12 m4">
         <div class="icon-block">
-          <h3 class="center large-icon"><a id="amenities" class="anchor"><i class="material-icons">done_all</i></a></h2>
+          <h3 class="center large-icon"><a id="amenities" class="anchor"><i class="material-icons">done_all</i></a></h3>
           <h2 class="center">Amenities</h2>
           <ul>
             <li><i class="material-icons">done</i> Pet Friendly</li>
@@ -82,7 +82,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h3 class="center large-icon"><a id="availability" class="anchor"><i class="material-icons">group</i></a></h2>
+          <h3 class="center large-icon"><a id="availability" class="anchor"><i class="material-icons">group</i></a></h3>
           <h2 class="center">Availability</h2>
           <p class="light">Availability is rare, but you can add yourself to the mailing list for future vacancies.</p>
         </div>
@@ -90,7 +90,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h3 class="center large-icon"><a id="pricing" class="anchor"><i class="material-icons">attach_money</i></a></h2>
+          <h3 class="center large-icon"><a id="pricing" class="anchor"><i class="material-icons">attach_money</i></a></h3>
           <h2 class="center">Pricing</h2>
           <p class="light">Prices range from $1,000 to $2,000. Our luxury apartments beat out our competitors in price to square foot!</p>
         </div>
@@ -130,7 +130,7 @@ layout: default
   {% include map.html %}
 </section>
 
-<section class="container">
+<section id="pictures" class="container">
   {% include pictures.html %}
 </section>
 
