--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,19 +11,19 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<link rel="stylesheet" href="css/blueimp-gallery.css">
 	<link rel="stylesheet" href="css/glide.core.min.css">
 	<link rel="stylesheet" href="css/glide.theme.css">
+	<!-- <link rel="stylesheet" href="css/responsivelyLazy.min.css"> -->
 	<!-- <link href="css/animate.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
 
   {{ content }}
   <!--  Scripts-->
+	<!-- <script async src="js/bin/responsivelyLazy.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/bin/materialize.js"></script>
 	<script src="js/bin/video.js"></script>
-	<script src="js/bin/blueimp-gallery.min.js"></script>
 	<script src="js/bin/glide.min.js"></script>
   <script src="js/bin/init.js"></script>
 	<script src="js/bin/map.js"></script>
