--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2654,6 +2654,7 @@ nav { height: 72px; padding: 4px 0; }
 .module--horizontal .box { width: 100%; }
 
 .glide__slide { border-left: thin solid white; border-right: thin solid white; opacity: 0.5; transition: opacity .6s; -o-transition: opacity .6s; -moz-transition: opacity .6s; -webkit-transition: opacity .6s; }
+.glide__slide div img { width: 100%; }
 
 .glide__slide.active { opacity: 1; }
 
