--- a/sass/_video.scss
+++ b/sass/_video.scss
@@ -2,6 +2,7 @@
     border-right: none;
     border-left: none;
     position: relative;
+    height: 700px;
     height: calc(100vh - 120px);
     overflow: hidden;
 }
