--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -1,7 +1,7 @@
 <div class="section">
   <div class="row">
     <div class="col s12 center">
-      <h2><a id="Pictures" class="anchor">Pictures</a></h2>
+      <h2><a id="pictures" class="anchor">Pictures</a></h2>
     </div>
   </div>
   <div class="module module--horizontal z-depth-4">
