--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,33 +2,7 @@
 layout: default
 ---
 <section class="navbar-fixed">
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper">
-      <a id="logo-container" href="#" class="brand-logo"><img src="img/logo.png" alt=""></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#amenities">Amenities</a></li>
-        <li><a href="#availability">Availability</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#lifestyle">Lifestyle</a></li>
-        <li><a href="#location">Location</a></li>
-        <li><a href="#pictures">Pictures</a></li>
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#amenities">Amenities</a></li>
-        <li><a href="#availability">Availability</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#lifestyle">Lifestyle</a></li>
-        <li><a href="#location">Location</a></li>
-        <li><a href="#pictures">Pictures</a></li>
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons light-blue-text text-accent-4">menu</i></a>
-    </div>
-  </nav>
+  {% include nav.html %}
 </section>
 
 <div class="important-header valign-wrapper center">
@@ -36,90 +10,19 @@ layout: default
 </div>
 
 <section class="homepage-hero-module">
-  <div class="video-container">
-    <div class="video-overlay valign-wrapper">
-      <div class="container">
-        <a href="#" class="logo-header"><img src="img/logo.png" alt="Fairport Ridge, Luxury Apartments logo"></a>
-        <div class="row center">
-          <a href="#" id="header-btn" class="btn-large waves-effect waves-light light-blue accent-4">Apply Today</a>
-        </div>
-      </div>
-    </div>
-    <video autoplay loop class="fillWidth">
-      <source src="img/Up.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-      <source src="img/Up.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-    </video>
-    <div class="poster">
-      <img src="img/Up.jpg" alt="Scenic clouds">
-    </div>
-  </div>
+  {% include video.html %}
 </section>
+
 <section class="container">
-  <div class="section">
-    <div class="row light-blue accent-4" id="top-split-box">
-      <h1 class="header col s12 center white-text">Fairport Ridge Apartments</h1>
-    </div>
-    <div class="row" id="bottom-split-box">
-      <h2 class="header col s12 center light-blue-text text-accent-4">Luxury Apartments near Corning, New York.</h2>
-    </div>
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h3 class="center large-icon"><a id="amenities" class="anchor"><i class="material-icons">done_all</i></a></h3>
-          <h2 class="center">Amenities</h2>
-          <ul>
-            <li><i class="material-icons">done</i> Pet Friendly</li>
-            <li><i class="material-icons">done</i> Attached Garages</li>
-            <li><i class="material-icons">done</i> Single Story</li>
-            <li><i class="material-icons">done</i> Low Density Housing</li>
-            <li><i class="material-icons">done</i> Spacious Design</li>
-            <li><i class="material-icons">done</i> Modern Kitchen</li>
-            <li><i class="material-icons">done</i> Excellent Craftsmanship</li>
-            <li><i class="material-icons">done</i> Energy Efficient</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h3 class="center large-icon"><a id="availability" class="anchor"><i class="material-icons">group</i></a></h3>
-          <h2 class="center">Availability</h2>
-          <p class="light">Availability is rare, but you can add yourself to the mailing list for future vacancies.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h3 class="center large-icon"><a id="pricing" class="anchor"><i class="material-icons">attach_money</i></a></h3>
-          <h2 class="center">Pricing</h2>
-          <p class="light">Prices range from $1,000 to $2,000. Our luxury apartments beat out our competitors in price to square foot!</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
+  {% include columns.html %}
 </section>
 
 <section class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-        <h4 class="header col s12 light shadowed">The most luxurious apartment complex in Corning, Big Flats, Elmira, and Horseheads.</h4>
-      </div>
-    </div>
-  </div>
-  <div class="parallax"><img src="img/b1.jpg" alt="Unsplashed background img 2"></div>
+  {% include parallax.html %}
 </section>
 
 <section class="container">
-  <div class="section">
-    <div class="row">
-      <div class="col s12 center">
-        <h2><a id="lifestyle" class="anchor">Lifestyle</a></h2>
-        <p class="left-align light">The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!</p>
-      </div>
-    </div>
-  </div>
+  {% include lifestyle.html %}
 </section>
 
 <section id="testimonials">
@@ -130,8 +33,12 @@ layout: default
   {% include map.html %}
 </section>
 
-<section id="pictures" class="container">
+<section class="container bottom-padding">
   {% include pictures.html %}
+</section>
+
+<section class="light-blue accent-4">
+  {% include faq.html %}
 </section>
 
 <footer class="page-footer light-blue">
