--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -87,6 +87,7 @@ nav {
 
 #map {
   width: 100%;
+  height: 500px;
   height: 60vh;
   border: none;
 }
@@ -260,4 +261,12 @@ nav {
 
 .glide__track {
   margin: 0;
+}
+
+.bottom-padding {
+  padding-bottom: 1.5rem;
+}
+
+.collapsible-body {
+  background-color: #eee;
 }
