--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,8 +8,8 @@
       <li><a href="#lifestyle">Lifestyle</a></li>
       <li><a href="#location">Location</a></li>
       <li><a href="#pictures">Pictures</a></li>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#faq">FAQ</a></li>
+      <li><a href="#contact">Contact Us</a></li>
     </ul>
 
     <ul id="nav-mobile" class="sidenav">
@@ -19,8 +19,8 @@
       <li><a class="sidenav-close" href="#lifestyle">Lifestyle</a></li>
       <li><a class="sidenav-close" href="#location">Location</a></li>
       <li><a class="sidenav-close" href="#pictures">Pictures</a></li>
-      <li><a class="sidenav-close" href="#">FAQ</a></li>
-      <li><a class="sidenav-close" href="#">Contact Us</a></li>
+      <li><a class="sidenav-close" href="#faq">FAQ</a></li>
+      <li><a class="sidenav-close" href="#contact">Contact Us</a></li>
     </ul>
     <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons light-blue-text text-accent-4">menu</i></a>
   </div>
